Repeating wpy customizations on the Vue 3 "beta" branch

--- a/src/css/global/variables.css
+++ b/src/css/global/variables.css
@@ -1,4 +1,5 @@
-:root {
+:root,
+:host {
     --vs-colors--lightest: rgba(60, 60, 60, 0.26);
     --vs-colors--light: rgba(60, 60, 60, 0.5);
     --vs-colors--dark: #333;
@@ -6,6 +7,7 @@
 
     /* Search Input */
     --vs-search-input-color: inherit;
+    --vs-search-input-bg: rgb(255, 255, 255);
     --vs-search-input-placeholder-color: inherit;
 
     /* Font */
