--- a/src/scss/modules/_dropdown-toggle.scss
+++ b/src/scss/modules/_dropdown-toggle.scss
@@ -34,6 +34,13 @@ $border-radius: $vs-border-radius;
     position: relative;
 }
 
+.vs__selected-options-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+
 .vs__actions {
     display: flex;
     align-items: center;
